--- a/grammar.html
+++ b/grammar.html
@@ -112,16 +112,16 @@
                                     London
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="grammar/elementary/lesson2.html" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 2</div>
-                                    Convection
+                                    Exam time
                                 </div>
                             </a>
-                            <a href="#" class="list-group-item list-group-item-action " aria-current="false">
+                            <a href="grammar/elementary/lesson3.html" class="list-group-item list-group-item-action " aria-current="false">
                                 <div class="ms-2 me-auto">
                                     <div class="fw-bold">Lesson 3</div>
-                                    Real estimable
+                                    Camping
                                 </div>
                             </a>
                             <a href="#" class="list-group-item list-group-item-action " aria-current="false">
