--- a/grammar/elementary/lesson2.html
+++ b/grammar/elementary/lesson2.html
@@ -70,43 +70,120 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                     <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a> </li>
-                    <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+                    <li class="breadcrumb-item active" aria-current="page">Lesson 2</li>
                 </ol>
             </nav>
         </div>
     </div>
 
     <div class="container">
-        <h1 class="display-1 text-center">Lesson 1</h1>
+        <h1 class="display-1 text-center">Lesson 2</h1>
     </div>
 
     <div class="container mt-4 text-center">
-        <h2>London</h2>
+        <h2>Exam time</h2>
 
 
     </div>
 
     <div class="container">
         <p class="fs-5 fw-weight-light">
-            London is a famous and historic city. It is the capital of England in the United Kingdom. The city is quite popular for international tourism because London is home to one of the oldest-standing monarchies in the western hemisphere. Rita and Joanne recently traveled to London. They were very excited for their trip because this was their first journey overseas from the United States.
+            It was exam time at Joe's school.
 
-            Among the popular sights that Rita and Joanne visited are Big Ben, Buckingham Palace, and the London Eye. Big Ben is one of London’s most famous monuments. It is a large clock tower located at the northern end of Westminster Palace. The clock tower is 96 meters tall. Unfortunately, Rita and Joanne were only able to view the tower from the outside. The women learned that the tower’s interior is undergoing renovations until 2021.
+            Every day, their teacher gave them loads of homework and told them they should be working hard so as to do well in their tests.
 
-            Fortunately, the London Eye, the city’s famous Ferris wheel, was open to the public. The London Eye is situated along the southern shores of the Thames River. This attraction stands 135 meters high. It is one of London’s most well-known spots for gaining aerial views of the city. Each capsule of the Ferris wheel can hold up to 25 passengers. When their capsule stopped at the top of the Ferris wheel, the women took spectacular panoramic photographs of the beautiful cityscape below.
+            Joe didn't take any notice. He reckoned he would rather be playing football.
 
-            The last place that Rita and Joanne visited was Buckingham Palace, the home of the Queen of England. The women were impressed by the palace’s incredible architecture and historical value. Both Rita and Joanne enjoyed watching the Queen’s guards outside the palace. These guards wore red tunic uniforms, shiny black boots, and bearskin hats. Despite the women’s attempts to catch the attention of the guards, the guards are specifically trained to avoid distractions. Because of this, the guards ignored the women completely.
+            He didn't care if he came bottom in the exams.
 
-            Joanne and Rita had an amazing time visiting the city of London, and they are inspired to seek more international travel destinations in the future.
+            His mum and dad told him that he should be working harder but the weather was sunny and Joe had better things to do.
+
+            “Shall we go to the park?” he said to his friend Finn one afternoon. “We could take a football and have a kick around.”
+
+            Finn shook his head.
+
+            “I need to revise,” he said. “I'm going home to do some maths.”
+
+            Joe was amazed. “You'd rather do maths than football?”
+
+            “Maths is important. Besides, my mum says she'll buy me a mountain bike if I do well.”
+
+            “That's crazy,” said Joe.
+
+            Finn shrugged. “Wait until I beat you in the test and you watch me riding past on my mountain bike!”
+
+            “You won't beat me,” said Joe.
+
+            “Oh yes I will.”
+
+            “Oh no you won't! Just you wait and see!”
+
+            For the first time ever, Joe wanted to do well. He couldn't bear it if Finn came top and he did badly. So when he got home, he opened his maths book.
+
+            There was so much to do.
+
+            Suddenly, he felt like he'd forgotten everything he'd learnt that year! He couldn't think where to start.
+
+            He was still sitting there when Bella came in chasing Caspar the kitten.
+
+            “You don't look happy,” she said. “Your mouth is all sad.”
+
+            “You wouldn't be happy either if you had to learn all this maths,” said Joe.
+
+            “I would just use my magic pencil. It always gets the right answer.”
+
+            “That's silly! There's no such thing as a magic pencil.”
+
+            “Yes, there is. Look, I'll show you.”
+
+            Bella ran out of the room and came back carrying a shiny, silver pencil with a fluffy unicorn stuck to one end. “What a silly thing,” thought Joe.
+
+            But Bella was beaming and he didn't want to hurt her feelings. So he picked up the pencil and looked at the maths question. To his surprise, he saw the answer straight away.
+
+            After that, Joe worked hard every evening.
+
+            On the day of the maths test, Bella said, “You can use my magic pencil if you like.”
+
+            “No way. I don't need your pencil,” said Joe rudely. He was thinking about how much his friends would laugh if he came to school with a fluffy unicorn pencil.
+
+            Bella was cross. “All right then, I'm not lending it to you!”
+
+            “Fine by me!”
+
+            When Joe arrived at school, everyone was talking about how much work they'd done. Finn kept grinning at him. The look that said, “I'm coming top, just you wait and see!”
+
+            Joe began to panic. He sat down at his desk, opened the test paper – and felt like he couldn't do a single question.
+
+            There was a knock at the door.
+
+            “What is it, Bella?” asked Joe's teacher. “We're busy now.”
+
+            “Just something Joe forgot,” said Bella. Before anyone could stop her she skipped over and put her magic pencil on Joe's desk. She grinned at
+
+            Joe as she left.
+
+            Joe picked up the pencil. He looked at the fluffy unicorn and could feel himself calming down.
+
+            He knew it wasn't really magic, but somehow he could do all the maths questions after all.
+
+            When the results came out, Joe had done even better than Finn.
+
+            “Well done!” said Mum. “I knew you could do well if you tried. We could go to a movie to celebrate, and you can choose which one.”
+
+            “I think Bella should choose,” Joe said. “I'd never have done it without her magic pencil!”
         </p>
     </div>
 
     <nav aria-label="Пример навигации по страницам">
         <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Lesson 1</a>
+            <li class="page-item">
+                <a class="page-link" href="lesson1.html">Lesson 1</a>
             </li>
-            <li>
-                <a class="page-link" href="lesson2.html">Lesson 2</a>
+            <li class="page-item disabled">
+                <a class="page-link disabled" >Lesson 2</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="lesson3.html">Lesson 3</a>
             </li>
         </ul>
     </nav>
@@ -117,7 +194,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                 <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a> </li>
-                <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+                <li class="breadcrumb-item active" aria-current="page">Lesson 2</li>
             </ol>
         </nav>
     </div>
