--- a/grammar/elementary/lesson3.html
+++ b/grammar/elementary/lesson3.html
@@ -70,43 +70,122 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                     <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a> </li>
-                    <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+                    <li class="breadcrumb-item active" aria-current="page">Lesson 3</li>
                 </ol>
             </nav>
         </div>
     </div>
 
     <div class="container">
-        <h1 class="display-1 text-center">Lesson 1</h1>
+        <h1 class="display-1 text-center">Lesson 3</h1>
     </div>
 
     <div class="container mt-4 text-center">
-        <h2>London</h2>
+        <h2>Camping</h2>
 
 
     </div>
 
     <div class="container">
         <p class="fs-5 fw-weight-light">
-            London is a famous and historic city. It is the capital of England in the United Kingdom. The city is quite popular for international tourism because London is home to one of the oldest-standing monarchies in the western hemisphere. Rita and Joanne recently traveled to London. They were very excited for their trip because this was their first journey overseas from the United States.
+            The Hobson family were going camping. It was Bella's first camping trip, and though she was excited, she was nervous too.
 
-            Among the popular sights that Rita and Joanne visited are Big Ben, Buckingham Palace, and the London Eye. Big Ben is one of London’s most famous monuments. It is a large clock tower located at the northern end of Westminster Palace. The clock tower is 96 meters tall. Unfortunately, Rita and Joanne were only able to view the tower from the outside. The women learned that the tower’s interior is undergoing renovations until 2021.
+            “What if the tent falls over and squashes us?” she asked Joe.
 
-            Fortunately, the London Eye, the city’s famous Ferris wheel, was open to the public. The London Eye is situated along the southern shores of the Thames River. This attraction stands 135 meters high. It is one of London’s most well-known spots for gaining aerial views of the city. Each capsule of the Ferris wheel can hold up to 25 passengers. When their capsule stopped at the top of the Ferris wheel, the women took spectacular panoramic photographs of the beautiful cityscape below.
+            “It too light to squash us,” said Joe.
 
-            The last place that Rita and Joanne visited was Buckingham Palace, the home of the Queen of England. The women were impressed by the palace’s incredible architecture and historical value. Both Rita and Joanne enjoyed watching the Queen’s guards outside the palace. These guards wore red tunic uniforms, shiny black boots, and bearskin hats. Despite the women’s attempts to catch the attention of the guards, the guards are specifically trained to avoid distractions. Because of this, the guards ignored the women completely.
+            “Well, what if the wind blows it away?”
 
-            Joanne and Rita had an amazing time visiting the city of London, and they are inspired to seek more international travel destinations in the future.
+            “The wind isn't strong enough.”
+
+            “Well, what if a wolf comes into the tent and eats us?”
+
+            This made Joe laugh. Bella had read too many fairy stories with big, bad wolves in them.
+
+            “There aren't any wolves in Yorkshire,” he said. “There aren't any wolves in the whole of Britain. Except in zoos, of course.”
+
+            “Well, what if one escaped from a zoo?” asked Bella.
+
+            Joe said that zoos were far too careful to let their animals escape. And Bella soon forgot about wolves as they started planning for the camping trip.
+
+            “Let's get ready, kids!” said Dad, on Saturday morning. “As soon as we're packed up, then we're off!”
+
+            They all helped load up the car.
+
+            First, they put in the tent – it was a big one for the whole family.
+
+            Then the sleeping bags and blankets. It’s cold at night, when you're sleeping in a tent.
+
+            Then they packed the cooking equipment, and lots of food to cook.
+
+            When everything was packed, the car was full to bursting. The Hobson family just managed to squeeze in.
+
+            Soon they were leaving the city behind them.
+
+            “Look at the hills!” said Dad. “Look at the heather on the moors!”
+
+            They drove up a winding road with no houses until they reached the turning for the campsite. It belonged to a farm and was in a big field.
+
+            There were views out over the moors, and lots of space for people to pitch their tent.
+
+            “Right,” said Dad. “First things first! Let's get the tent up. Here's a good spot, next to this hedge.”
+
+            Once the tent was up, it was time to eat. Then Joe and Bella went to explore. There were trees to climb and a stream for paddling.
+
+            Bella started collecting tadpoles in a jar with another girl, and Joe played on a rope swing with some of the older kids. The day flew by.
+
+            “Tomorrow,” said Dad, “we'll go for a long hike over the moors.”
+
+            “I can't wait,” said Joe.
+
+            It was getting dark. The family ate sausages and beans, then roasted marshmallows on sticks over a camp fire. They drank hot chocolate too.
+
+            In the darkness, strange rustling noises came from the hedge next to their tent.
+
+            “What's that noise?” asked Bella. She looked nervous, and moved closer to Mum.
+
+            “Don't worry, it's not a wolf,” said Joe teasingly.
+
+            “How do you know?”
+
+            “I expect it's just a rabbit, Bella,” said Dad. “Or maybe it's just the wind, rustling the leaves.”
+
+            Bella didn't say anything more. Of course she was only little, thought Joe. You couldn't really blame her for having silly worries about wolves!
+
+            “Time for bed,” said Mum.
+
+            They were all tired after a day outdoors. They put out the fire, closed the tent flap and crawled into their sleeping bags. Soon Bella, Mum and
+
+            Dad were asleep.
+
+            Joe was too excited to sleep. So he lay awake thinking about the day, and wondering what would happen tomorrow.
+
+            Suddenly, he heard something from outside the tent. A rustling noise.
+
+            “Probably just a rabbit,” he thought.
+
+            Then he heard more rustling. It sounded like something walking around outside – something bigger than a rabbit.
+
+            What if, thought Joe, Bella was right? What if a wolf did escape from a zoo? This campsite was just the kind of place it might like.
+
+            Joe lay there, shivering, as the rustling continued. At last, he could bear it no longer. He got up and stuck his head out of the tent.
+
+            A cow gazed at him over the hedge. She had soft, brown eyes, and was chewing peacefully on some leaves. “Moo!” she said.
+
+            Joe chuckled to himself as he crawled back into his sleeping bag. “To think I was afraid of a cow!”
         </p>
     </div>
 
     <nav aria-label="Пример навигации по страницам">
         <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Lesson 1</a>
-            </li>
-            <li>
+            <li class="page-item">
                 <a class="page-link" href="lesson2.html">Lesson 2</a>
+            </li>
+            <li class="page-item disabled">
+                <a class="page-link disabled" >Lesson 3</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">Lesson 4</a>
             </li>
         </ul>
     </nav>
@@ -117,7 +196,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                 <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a> </li>
-                <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+                <li class="breadcrumb-item active" aria-current="page">Lesson 3</li>
             </ol>
         </nav>
     </div>
