--- a/grammar/elementary/lesson4.html
+++ b/grammar/elementary/lesson4.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">News</a>
+                        <a class="nav-link" href=../../news.html>News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../article.html">Article</a>
@@ -70,119 +70,78 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                     <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a> </li>
-                    <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+                    <li class="breadcrumb-item active" aria-current="page">Lesson 4</li>
                 </ol>
             </nav>
         </div>
     </div>
 
     <div class="container">
-        <h1 class="display-1 text-center">Lesson 1</h1>
+        <h1 class="display-1 text-center">Lesson 4</h1>
     </div>
 
     <div class="container mt-4 text-center">
-        <h2>No Pets Here</h2>
+        <h2>Rainy day</h2>
 
 
     </div>
 
     <div class="container">
         <p class="fs-5 fw-weight-light">
-            Joe and Bella had always wanted a pet. But their parents always said no.
-
-            “We're too busy,” they said.  “Pets make too much mess. We've enough to do, without a pet as well!”
-
-            Then one day, Bella came home from school very excited. “My friend Izzy has got a  hamster,” she told the rest of the family over tea. “She's asked me to go round and play tomorrow so I can meet her. I wish I could have a hamster!”
-
-            “Well you can't,” said Mum, passing round spaghetti. “No pets here!”
-
-            “I'd like a puppy,” said Joe.
-
-            “You know we can't have a puppy,” said Mum. “We're all too busy to take it for walks.”
-
-            “Then how about a kitten?” Joe asked.
-
-            “No kittens, either,” said Dad. “In fact, no pets at all!”
-
-            The next day, Bella was going to Izzy's house. Joe decided to invite his friend Finn round to play in the garden. He told Finn, “We'll be able to play football for once without Bella getting in the way.”
-
-            But when the boys got home, Joe had a shock. Bella and Izzy were there too!
-
-            “What are they doing here?” he complained to Mum.
-
-            “Izzy's mum had an appointment, so she dropped Izzy off here instead,” Mum explained.
-
-            “But Finn and I want the garden to ourselves.”
-
-            “Don't worry about that,” said Mum. “Bella's busy.”
-
-            Joe understood when he saw that Izzy had brought something with her: her hamster!
-
-            “She's called Harriet,” Bella told Joe. “Isn't she lovely?”
-
-            Harriet was small and round with beady eyes, golden fur and long whiskers. She sat in Bella's hand and snuffled at Joe. Then Bella fed her a lettuce leaf. Nibble, nibble, nibble, went Harriet, and the leaf disappeared in no time.
-
-            “She's cute,” Joe had to admit.
-
-            “Look, she's got a ball,” Bella said. Izzy showed them a big, see-through ball made of purple plastic. She put Harriet inside. Harriet began to run, and the ball moved across the floor.
-
-            “You see,” Izzy explained, “this way, Harriet can run wherever she wants.”
-
-            “Just make sure she doesn't escape,” said Mum. “If she did, we'd never catch her. Be careful when you put her back in her cage.”
-
-            Joe and Finn went into the garden to play football. They were practising penalties, when they heard a shout. It was Bella – and it was loud!
-
-            The two boys ran for the house.
-
-            “What's the matter?” asked Joe.
-
-            “Harriet's gone,” Bella wailed.
-
-            “What do you mean – gone?”
-
-            “We were lifting her out of her ball,” said Bella. “And – we dropped her.”
-
-            Bella and Izzy began to cry.
-
-            “Come on,” said Joe. “We've got to look for her.” They all got down on their hands and knees. Mum came in and helped too.
-
-            But Harriet must have been scared of all the noise.
-
-            “Don't worry,” said Mum. “She'll come out when she's hungry.”
-
-            She didn't.
-
-            When Dad came home, they all searched again, but they couldn't find her.
-
-            “I'm afraid she's gone under the floorboards,” said Dad. “We'll never find her now.”
-
-            For a whole week, there was no sign of Harriet. Then, one night, Joe woke up. “I wonder,” he thought, “if I went downstairs now and was very quiet...”
-
-            He crept downstairs. And there, sitting in the middle of the kitchen floor, calmly nibbling on a breadcrumb – was Harriet!
-
-            Bella was very happy. And when she told Izzy the news, she was even happier, because Izzy didn't want Harriet back.
-
-            Izzy had a new hamster. She said that Bella could keep Harriet!
-
-            “Please can I?” Bella asked her parents.
-
-            “I suppose so,” said Mum.
-
-            “But what about me?” demanded Joe. “Why should Bella have a pet and not me?”
-
-            “I suppose that's true,” said Dad.
-
-            And that's how Joe got a kitten. He called him Caspar.
+            One weekend, Mum had to work a shift at the hospital, and Dad had loads of marking to do, which meant that neither of them had time to look after Joe and Bella.
+            But Joe and Bella didn't mind. They were going to spend the weekend with Gran, and Gran had promised to take them to the beach!
+            There was just one problem. When they woke up on Saturday morning, and looked out of the window, the rain was sheeting down!
+            Bella pressed her nose against the glass and said hopefully, “We can still go, can't we?”
+            But when Gran arrived to collect them, it was still pouring, and Gran said they would just have to spend the day at her house instead.
+            It rained and rained. They watched a movie on TV, and when they stopped it was still raining.
+            They played cards with Gran, and when they stopped it was still raining. They did some homework, ready for Monday, and when they stopped - it was still raining!
+            They tried taking Gran's dog, Selby, for a walk, but when they opened the door, Selby took one look, whined, and ran back inside again!
+            Eventually, Gran went off to do some housework. Joe decided to do more homework. He had tests coming up at school and Mum and Dad were always on at him to work harder. But Bella was too little to worry about tests.
+            “I'm bored,” she said. “I hate this weather!”
+            “There's nothing we can do about it,” said Joe. “You'll just have to make the best of it.”
+            Bella stomped off. Joe wasn't paying much attention to her, he was too busy with his maths.
+            After a while, though, he noticed a banging and thumping from the kitchen. What was Bella up to?
+            He got up and looked round the door. Bella was mixing something in a huge mixing bowl.
+            “What's that?” Joe asked.
+            “It's a lovely cake,” said Bella happily. “But you can't have any.”
+            “That's a relief,” said Joe. “Because it looks terrible. And it smells worse!”
+            The cake mixture had all kinds of lumps in it and the smell was like no cake that Joe had ever smelled before!
+            “It's not for humans,” said Bella. “It's for dogs. I've made it specially for Selby, because he couldn't go for his walk.”
+            “What's it got in it?” Joe asked.
+            “Dog food,” said Bella. “Silly! And it's got cornflakes, because Selby loves cornflakes. And yogurt, because Selby loves yogurt. And toast and
+            biscuits and tinned rice pudding. ”
+            Joe was feeling queasy just thinking about it.
+            “Well, I hope Selby likes it,” he said.
+            But Selby didn't like it.
+            When Bella put it down on the floor for him to eat (raw, because she said it would taste better that way), Selby took one sniff and then ran out of the room!
+            Bella burst into tears.
+            Gran came running into the kitchen. “Oh dear, what is the matter, Bella?” she asked.
+            “It's raining,” Bella howled. “It's never going to stop! We can't go to the beach! And now Selby doesn't like my cake!”
+            Joe didn't say anything, but he knew how Bella felt. It was turning into a horrible day.
+            “Now then,” said Gran. “Things aren't that bad. Why don't we do something to cheer ourselves up?”
+            “Like what?” sniffed Bella.
+            “How about we make a cake as a surprise for your parents? A cake for humans, not for dogs? After all, they've been working hard all day.”
+            “Can we eat some too?” asked Bella.
+            “Of course you can,” said Gran.
+            “And can it be chocolate sponge?” asked Joe.
+            “With chocolate fudge icing?” asked Bella. “And sprinkles?”
+            “It certainly can,” said Gran.
+            They had a lovely time making the cake. And when they had finished decorating it, they suddenly realised that it wasn't raining any more. They had been so busy they hadn't even noticed.
+            “Quick, let's get out while the sun's shining!” said Gran.
+            They took Selby down to the park, and when they got back, Mum and Dad had arrived. Everybody was just ready for a slice of cake!
         </p>
     </div>
 
     <nav aria-label="Пример навигации по страницам">
         <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Lesson 1</a>
+            <li class="page-item">
+                <a class="page-link" href="lesson2.html">Lesson 3</a>
             </li>
-            <li>
-                <a class="page-link" href="lesson2.html">Lesson 2</a>
+            <li class="page-item disabled">
+                <a class="page-link disabled" >Lesson 4</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">Lesson 5</a>
             </li>
         </ul>
     </nav>
@@ -193,7 +152,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                 <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a> </li>
-                <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+                <li class="breadcrumb-item active" aria-current="page">Lesson 4</li>
             </ol>
         </nav>
     </div>
