--- a/grammar/elementary/lesson5.html
+++ b/grammar/elementary/lesson5.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">News</a>
+                        <a class="nav-link" href=../../news.html>News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../article.html">Article</a>
@@ -70,119 +70,96 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                     <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a> </li>
-                    <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+                    <li class="breadcrumb-item active" aria-current="page">Lesson 5</li>
                 </ol>
             </nav>
         </div>
     </div>
 
     <div class="container">
-        <h1 class="display-1 text-center">Lesson 1</h1>
+        <h1 class="display-1 text-center">Lesson 4</h1>
     </div>
 
     <div class="container mt-4 text-center">
-        <h2>No Pets Here</h2>
+        <h2>Football Match</h2>
 
 
     </div>
 
     <div class="container">
         <p class="fs-5 fw-weight-light">
-            Joe and Bella had always wanted a pet. But their parents always said no.
+            Joe loved football. He played it with his friends at school, in the park with his dad on weekends, and sometimes he even played it with his little sister, Bella, in their back garden. She usually missed the ball when she tried to kick it. But it was better than nothing.
 
-            “We're too busy,” they said.  “Pets make too much mess. We've enough to do, without a pet as well!”
+            “I wish I could be on the school team,” Joe told his friend, Finn. But maybe because he was small for his age, he never got chosen.
 
-            Then one day, Bella came home from school very excited. “My friend Izzy has got a  hamster,” she told the rest of the family over tea. “She's asked me to go round and play tomorrow so I can meet her. I wish I could have a hamster!”
+            Then one day at break time, when Joe was playing football with his friends, Mr Burton, the football coach, came over.
 
-            “Well you can't,” said Mum, passing round spaghetti. “No pets here!”
+            “How would you like to play for the school team this weekend?” asked Mr Burton.
 
-            “I'd like a puppy,” said Joe.
+            Joe felt like he was going to burst.
 
-            “You know we can't have a puppy,” said Mum. “We're all too busy to take it for walks.”
+            “I'd love it!” he said.
 
-            “Then how about a kitten?” Joe asked.
+            Joe felt so excited that he couldn't wait to tell Mum and Dad. But there was a problem.
 
-            “No kittens, either,” said Dad. “In fact, no pets at all!”
+            “I'm so pleased for you,” said Mum. “But – oh dear – I'm not sure you can play this weekend. You see, Dad and I are away, and you and Bella are going to stay with Gran.”
 
-            The next day, Bella was going to Izzy's house. Joe decided to invite his friend Finn round to play in the garden. He told Finn, “We'll be able to play football for once without Bella getting in the way.”
+            Gran lived close by. She often looked after Joe and Bella when Mum and Dad were busy.
 
-            But when the boys got home, Joe had a shock. Bella and Izzy were there too!
+            “But I've got to,” Joe said. “It's my big chance!”
 
-            “What are they doing here?” he complained to Mum.
+            Gran had made plans to take them for a long walk with her dog, Selby, on Saturday morning. But when she heard, she said she would take Joe to the football match instead. “Of course, I'll have to bring Bella and Selby too.”
 
-            “Izzy's mum had an appointment, so she dropped Izzy off here instead,” Mum explained.
+            Joe wasn't sure about this. Bella could be such a nuisance. You never could be sure what she might do!
 
-            “But Finn and I want the garden to ourselves.”
+            On Saturday morning Joe found it hard to eat breakfast, he was so nervous. He gave some of his toast to Selby when Gran wasn't looking.
 
-            “Don't worry about that,” said Mum. “Bella's busy.”
+            The football pitch was in the park. There were lots of kids getting ready, and lots of parents standing at the side to watch. Some of them had dogs. The dogs barked at Selby and Selby barked back.
 
-            Joe understood when he saw that Izzy had brought something with her: her hamster!
+            Gran and Bella waved at Joe as he ran onto the field. “Good luck!” they shouted.
 
-            “She's called Harriet,” Bella told Joe. “Isn't she lovely?”
+            Joe was pleased to see that Gran was keeping tight hold of Selby and Bella. Selby was pulling hard on her lead, and Bella was jumping up and down. Poor Gran looked close to being pulled in two!
 
-            Harriet was small and round with beady eyes, golden fur and long whiskers. She sat in Bella's hand and snuffled at Joe. Then Bella fed her a lettuce leaf. Nibble, nibble, nibble, went Harriet, and the leaf disappeared in no time.
+            The whistle blew and the match began. Joe ran up the field with the ball. He was about to pass it when a big boy from the other team crashed into him. He was almost twice as big as Joe. All the breath was knocked out of Joe, and the ball went off the pitch.
 
-            “She's cute,” Joe had to admit.
+            Joe hoped the referee would show the boy a yellow card. But the referee didn't seem to have noticed. Maybe there had been too many players in the way. After that, whenever the referee wasn't looking in their direction, the big boy would give Joe a shove. It made it really difficult for Joe to play well.
 
-            “Look, she's got a ball,” Bella said. Izzy showed them a big, see-through ball made of purple plastic. She put Harriet inside. Harriet began to run, and the ball moved across the floor.
+            The next time the ball came towards them, the big boy stuck out his foot and tripped Joe up.
 
-            “You see,” Izzy explained, “this way, Harriet can run wherever she wants.”
+            “Hey!” yelled Finn, as Joe lay on the ground. “Did you see that?”
 
-            “Just make sure she doesn't escape,” said Mum. “If she did, we'd never catch her. Be careful when you put her back in her cage.”
+            But the referee said that it had been an accident.
 
-            Joe and Finn went into the garden to play football. They were practising penalties, when they heard a shout. It was Bella – and it was loud!
+            Selby and Bella had seen.
 
-            The two boys ran for the house.
+            Selby tugged on her lead and barked at the referee.
 
-            “What's the matter?” asked Joe.
+            “Please control that dog,” the referee told Gran. “Or I will ask you to leave!”
 
-            “Harriet's gone,” Bella wailed.
+            Gran was trying so hard to hold Selby that she let go of Bella's hand. Bella ran onto the pitch and up to the boy who had tripped Joe.
 
-            “What do you mean – gone?”
+            “Don't you dare trip up my brother!” she told him. “I saw you push him too!
 
-            “We were lifting her out of her ball,” said Bella. “And – we dropped her.”
+            Joe was really embarrassed. But, to his surprise, most of the parents and players were on Bella's side. Some of them began to cheer.
 
-            Bella and Izzy began to cry.
+            “She's quite right,” they said. “That big boy's a bully! It's disgraceful!”
 
-            “Come on,” said Joe. “We've got to look for her.” They all got down on their hands and knees. Mum came in and helped too.
+            Gran grabbed hold of Bella. For the rest of the match the bigger boy didn't dare touch Joe. And after fifteen minutes – Joe scored a goal!
 
-            But Harriet must have been scared of all the noise.
-
-            “Don't worry,” said Mum. “She'll come out when she's hungry.”
-
-            She didn't.
-
-            When Dad came home, they all searched again, but they couldn't find her.
-
-            “I'm afraid she's gone under the floorboards,” said Dad. “We'll never find her now.”
-
-            For a whole week, there was no sign of Harriet. Then, one night, Joe woke up. “I wonder,” he thought, “if I went downstairs now and was very quiet...”
-
-            He crept downstairs. And there, sitting in the middle of the kitchen floor, calmly nibbling on a breadcrumb – was Harriet!
-
-            Bella was very happy. And when she told Izzy the news, she was even happier, because Izzy didn't want Harriet back.
-
-            Izzy had a new hamster. She said that Bella could keep Harriet!
-
-            “Please can I?” Bella asked her parents.
-
-            “I suppose so,” said Mum.
-
-            “But what about me?” demanded Joe. “Why should Bella have a pet and not me?”
-
-            “I suppose that's true,” said Dad.
-
-            And that's how Joe got a kitten. He called him Caspar.
+            “Can I always come and watch you play football?” asked Bella at the end of the game. And Joe said she could.
         </p>
     </div>
 
     <nav aria-label="Пример навигации по страницам">
         <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Lesson 1</a>
+            <li class="page-item">
+                <a class="page-link" href="lesson2.html">Lesson 4</a>
             </li>
-            <li>
-                <a class="page-link" href="lesson2.html">Lesson 2</a>
+            <li class="page-item disabled">
+                <a class="page-link disabled" >Lesson 5</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">Lesson 6</a>
             </li>
         </ul>
     </nav>
@@ -193,7 +170,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                 <li class="breadcrumb-item "><a href="../../grammar.html">Grammar course</a> </li>
-                <li class="breadcrumb-item active" aria-current="page">Lesson 1</li>
+                <li class="breadcrumb-item active" aria-current="page">Lesson 5</li>
             </ol>
         </nav>
     </div>
